--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
-.App {
-  color: aqua;
-  font-size: 200px;
+.home {
+  text-transform: uppercase;
+  font-size: 100px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 /*# sourceMappingURL=App.css.map */
