variables from cardly

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,2 +1,27 @@
 $primary-font: "Source Sans Pro", sans-serif;
 $secondary-font: "Lato", sans-serif;
+
+$primary: #00cccc;
+$primary-ultralight: #d9fbfb;
+$primary-light: #6bd9de;
+$primary-light-rgb: 107, 217, 222;
+$primary-muted: #8bd5db;
+$primary-dark: #00a5a5;
+$primary-darker: #007373;
+$secondary: #ffd100;
+$tertiary: #333333;
+$notifications: #c8f4f8;
+$white: #ffffff;
+$near-white: #fcfcfc;
+$off-white: #f7f7f7;
+$ultralight-grey: #eeeeee;
+$light-grey: #bbbbbb;
+$mid-grey: #666666;
+$dark-grey: #333333;
+$off-black: #0a0a0a;
+$black: #000000;
+$red: #ff0000;
+$card-bg: var(--white);
+$card-border: #eeeeee;
+$card-hover-bg: #e2e8ee;
+$card-radius: 6px;
