--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,31 @@
 @import "./css/variables.scss";
+@import "./css/navbar.scss";
 @import "./css/home.scss";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.main-container {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  top: $navbar-height;
 }
