--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,7 @@
 .navbar {
   width: 100vw;
-  height: 50px;
-  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
-          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
-  background-color: #fcfcfc;
-  display: none;
+  height: 60px;
+  display: block;
 }
 
 .navbar-container {
@@ -24,6 +21,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-bottom: 3px solid #00cccc;
+  padding: 0px 20px;
 }
 
 .left-navbar-container {
@@ -47,11 +46,48 @@
 .logo {
   font-family: "Lato", sans-serif;
   font-size: 1.5rem;
+  color: #00cccc;
 }
 
 .navbar-icon {
   font-size: 1.6rem;
   margin: 5px;
+  color: #00cccc;
+}
+
+.btn-template-container {
+  padding: 10px 30px;
+  background-color: #00a5a5;
+  border-radius: 10px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.btn-template-container:hover {
+  background-color: #ffd100;
+}
+
+.btn-template-text {
+  color: #fcfcfc;
+  font-family: "Source Sans Pro", sans-serif;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.home-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 80vh;
 }
 
 .home-title {
@@ -60,11 +96,251 @@
   color: #00cccc;
 }
 
+.home-line {
+  width: 60vw;
+  height: 3px;
+  background-color: #00cccc;
+}
+
+.home-intro-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 30px;
+  width: 100%;
+}
+
+.home-intro-card-container {
+  height: 300px;
+  width: 250px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.home-intro-icon {
+  font-size: 3.5rem;
+  color: #00cccc;
+}
+
+.home-intro-title {
+  font-family: "Lato", sans-serif;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  margin: 20px;
+  color: #007373;
+}
+
+.home-intro-text {
+  font-family: "Source Sans Pro", sans-serif;
+  text-align: center;
+  color: #00a5a5;
+}
+
+.home-log-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 60px;
+  width: 150px;
+}
+
+.home-log-btn {
+  font-family: "Lato", sans-serif;
+  font-size: 1.1rem;
+  color: #00a5a5;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.home-log-btn:hover {
+  color: #007373;
+  font-size: 1.15rem;
+}
+
+.auth-container {
+  width: 100vw;
+  height: 70vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.auth-input-container {
+  width: 400px;
+  height: 400px;
+  border: 3px solid #00cccc;
+  border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+.auth-title-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding: 20px;
+  width: 100%;
+}
+
+.auth-icon {
+  font-size: 35px;
+  color: #00cccc;
+}
+
+.auth-title {
+  font-family: "Lato", sans-serif;
+  text-transform: capitalize;
+  font-size: 1.3rem;
+  color: #00cccc;
+  position: relative;
+}
+
+.auth-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 100%;
+}
+
+.auth-text-input {
+  color: #007373;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 3px;
+  border: 1px solid #00a5a5;
+}
+
+.auth-input-inner-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.auth-input-inner-container label {
+  color: #007373;
+}
+
+.auth-error-txt {
+  font-size: 0.8rem;
+  color: #ff0000;
+}
+
 * {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+input:focus {
+  border: none;
+}
+
+button {
+  outline: none;
+  border: none;
+  text-decoration: none;
+}
+
+button:active {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-transform: none;
+          transform: none;
+}
+
+button:focus {
+  border: none;
+  outline: none;
 }
 
 body {
@@ -104,6 +380,5 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
   position: relative;
-  top: 50px;
 }
 /*# sourceMappingURL=App.css.map */
