--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -1,9 +1,7 @@
 .navbar {
   width: 100vw;
   height: $navbar-height;
-  box-shadow: 0px 0px 10px rgba($color: #000000, $alpha: 0.8);
-  background-color: $near-white;
-  display: none;
+  display: block;
 }
 
 .navbar-container {
@@ -14,6 +12,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 3px solid $primary;
+  padding: 0px 20px;
 }
 
 .left-navbar-container {
@@ -28,9 +28,30 @@
 .logo {
   font-family: $secondary-font;
   font-size: 1.5rem;
+  color: $primary;
 }
 
 .navbar-icon {
   font-size: 1.6rem;
   margin: 5px;
+  color: $primary;
+}
+
+.btn-template-container {
+  padding: 10px 30px;
+  background-color: $primary-dark;
+  border-radius: 10px;
+  transition: all 0.3s;
+  color: $near-white;
+
+  &:hover {
+    background-color: $secondary;
+    color: $black;
+  }
+}
+
+.btn-template-text {
+  font-family: $primary-font;
+  text-transform: uppercase;
+  font-weight: 600;
 }
