--- a/src/App.css
+++ b/src/App.css
@@ -61,14 +61,15 @@
   border-radius: 10px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+  color: #fcfcfc;
 }
 
 .btn-template-container:hover {
   background-color: #ffd100;
+  color: #000000;
 }
 
 .btn-template-text {
-  color: #fcfcfc;
   font-family: "Source Sans Pro", sans-serif;
   text-transform: uppercase;
   font-weight: 600;
@@ -206,7 +207,6 @@
 
 .auth-input-container {
   width: 400px;
-  height: 400px;
   border: 3px solid #00cccc;
   border-radius: 20px;
   display: -webkit-box;
@@ -289,6 +289,10 @@
   border: 1px solid #00a5a5;
 }
 
+.auth-text-input:focus {
+  border: none;
+}
+
 .auth-input-inner-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -303,6 +307,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 10px;
 }
 
 .auth-input-inner-container label {
@@ -319,10 +324,6 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-input:focus {
-  border: none;
 }
 
 button {
