--- a/src/css/auth.scss
+++ b/src/css/auth.scss
@@ -6,11 +6,12 @@
 
 .auth-input-container {
   width: 400px;
-  border: 3px solid $primary;
+  // border: 3px solid $primary;
   border-radius: 20px;
   @include flex-column-center;
   justify-content: flex-start;
   font-family: $primary-font;
+  box-shadow: 0px 0px 5px rgba($color: #000000, $alpha: 0.3);
 }
 
 .auth-title-container {
