--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import "./css/navbar.scss";
 @import "./css/home.scss";
 @import "./css/auth.scss";
+@import "./css/occasionHome.scss";
 
 * {
   margin: 0;
