--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @import "./css/home.scss";
 @import "./css/auth.scss";
 @import "./css/occasionHome.scss";
+@import "./css/occList.scss";
 
 * {
   margin: 0;
