--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -28,9 +28,22 @@ $card-radius: 6px;
 
 $navbar-height: 60px;
 
+$box-shadow-containers: 0px 0px 5px
+  rgba(
+    $color: #000000,
+    $alpha: 0.3,
+  );
+
 @mixin flex-column-center {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@mixin flex-row-center {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
