--- a/src/css/occasionHome.scss
+++ b/src/css/occasionHome.scss
@@ -21,6 +21,10 @@
   width: 50vw;
   background-color: $near-white;
   @include flex-column-center;
+  transition: all 0.2s;
+  &:hover {
+    box-shadow: 5px 5px 10px rgba($color: #000000, $alpha: 0.2);
+  }
 }
 
 .occ-upNext-icon {
