--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 @import "./css/auth.scss";
 @import "./css/occasionHome.scss";
 @import "./css/occList.scss";
+@import "./css/addOcc.scss";
 
 * {
   margin: 0;
