--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 @import "./css/occasionHome.scss";
 @import "./css/occList.scss";
 @import "./css/addOcc.scss";
+@import "./css/occasionPage.scss";
 
 * {
   margin: 0;
