--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,5 +1,6 @@
 $primary-font: "Source Sans Pro", sans-serif;
 $secondary-font: "Lato", sans-serif;
+$tertiary-font: "Sacramento", cursive;
 
 $primary: #00cccc;
 $primary-ultralight: #d9fbfb;
