--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 @import "./css/occList.scss";
 @import "./css/addOcc.scss";
 @import "./css/occasionPage.scss";
+@import "./css/giftsPage.scss";
 
 * {
   margin: 0;
