--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import "./css/variables.scss";
 @import "./css/navbar.scss";
+@import "./css/btnTemplate.scss";
 @import "./css/home.scss";
 @import "./css/auth.scss";
 @import "./css/occasionHome.scss";
@@ -7,6 +8,7 @@
 @import "./css/addOcc.scss";
 @import "./css/occasionPage.scss";
 @import "./css/giftsPage.scss";
+@import "./css/cartPage.scss";
 
 * {
   margin: 0;
