--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
 @import "./css/occasionPage.scss";
 @import "./css/giftsPage.scss";
 @import "./css/cartPage.scss";
+@import "./css/scheduledPage.scss";
 
 * {
   margin: 0;
