--- a/src/css/btnTemplate.scss
+++ b/src/css/btnTemplate.scss
@@ -37,3 +37,48 @@
     color: $black;
   }
 }
+
+.profile-btn-popup {
+  position: absolute;
+  width: 200px;
+  display: none;
+  opacity: 0;
+  transition: all 0.5s;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 0px 10px rgb(163, 163, 163);
+  top: 45px;
+  right: 5px;
+  z-index: 1;
+  border-radius: 5px;
+}
+
+.profile-btn-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-btn {
+  position: relative;
+  font-size: 1rem;
+  margin: 8px;
+  color: $primary;
+}
+
+.profile-btn-popup-txt {
+  position: relative;
+  font-size: 16px;
+  color: $dark-grey;
+  font-family: $secondary-font;
+  border-radius: 5px;
+  padding: 12px 20px 12px 10px;
+  padding-left: 20px;
+  cursor: pointer;
+  transition: background-color 0.5s;
+}
+
+.profile-btn-popup-txt:hover {
+  background-color: rgb(247, 247, 247);
+}
