--- a/src/css/cartPage.scss
+++ b/src/css/cartPage.scss
@@ -28,6 +28,7 @@
   min-height: 300px;
   padding: 20px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
