--- a/src/css/occList.scss
+++ b/src/css/occList.scss
@@ -43,6 +43,18 @@
   }
 }
 
+.occ-list-btn-container-active {
+  width: 100%;
+  height: 100%;
+  @include flex-column-center;
+  transition: all 0.3s;
+  h6 {
+    font-size: 0.8rem;
+    color: $mid-grey;
+  }
+  background-color: $off-white;
+}
+
 .occ-list-item-container {
   height: 40px;
   width: 100%;
