--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -6,7 +6,7 @@
 
 .navbar-container {
   margin: auto;
-  width: 50vw;
+  width: $container-width;
   height: 100%;
   display: flex;
   flex-direction: row;
