--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -29,6 +29,8 @@ $card-radius: 6px;
 
 $navbar-height: 60px;
 
+$container-width: 70vw;
+
 $box-shadow-containers: 0px 0px 5px
   rgba(
     $color: #000000,
