--- a/src/css/cartPage.scss
+++ b/src/css/cartPage.scss
@@ -89,7 +89,8 @@
 }
 
 .cart-page-title {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   padding: 4px;
   border-bottom: 2px solid $primary;
+  color: $dark-grey;
 }
