--- a/src/css/occasionPage.scss
+++ b/src/css/occasionPage.scss
@@ -1,6 +1,7 @@
 .occasion-page-container {
   margin-top: 20px;
   padding: 10px;
+  padding-bottom: 30px;
   background-color: $near-white;
   width: $container-width;
   @include flex-column-center;
@@ -9,14 +10,10 @@
 
 .occasion-page-title {
   border-radius: 20px;
-  padding: 30px;
+  padding: 0px 0px 20px 0px;
   color: $mid-grey;
   text-align: center;
-  //   background-color: $near-white;
   transition: all 0.2s;
-  //   &:hover {
-  //     box-shadow: 5px 5px 10px rgba($color: #000000, $alpha: 0.2);
-  //   }
   h2 {
     font-size: 1.5rem;
     font-family: $secondary-font;
@@ -36,8 +33,56 @@
   text-align: center;
 }
 
+.occasion-page-img {
+  height: 300px;
+  margin: 20px;
+  border: 1px solid $primary;
+}
+
 .occasion-page-btn-container {
-  height: 200px;
+  min-height: 200px;
   @include flex-column-center;
   justify-content: space-around;
+  h1 {
+    font-size: 1.5rem;
+    color: $mid-grey;
+  }
+  h2 {
+    color: $mid-grey;
+    font-size: 1.3rem;
+    margin-bottom: 10px;
+  }
+}
+
+.occ-page-gitOk-container {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.occ-page-gitOk-txt-container {
+  width: 250px;
+  height: 300px;
+  background-color: white;
+  padding: 20px;
+  border: 1px solid $primary;
+  @include flex-column-center;
+  justify-content: space-evenly;
+  p {
+    font-family: $secondary-font;
+  }
+}
+
+.occ-page-gitOk-title {
+  font-size: 0.3rem;
+}
+
+.occasion-page-giftOk-btn-container {
+  width: 600px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
 }
