--- a/src/css/occasionPage.scss
+++ b/src/css/occasionPage.scss
@@ -40,6 +40,7 @@
 }
 
 .occasion-page-btn-container {
+  position: relative;
   min-height: 200px;
   @include flex-column-center;
   justify-content: space-around;
@@ -85,4 +86,27 @@
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
+}
+
+.occasion-page-okGift-modal {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba($color: #000000, $alpha: 0.2);
+}
+
+.occasion-page-okGift-modal-container {
+  @include flex-column-center;
+  justify-content: space-around;
+  position: relative;
+  width: 400px;
+  height: 200px;
+  background-color: white;
+  top: 35vh;
+  left: 50vw;
+  transform: translateX(-200px);
+  box-shadow: 0px 0px 10px rgba($color: #000000, $alpha: 0.5);
+  border-radius: 10px;
 }
