--- a/src/css/occasionPage.scss
+++ b/src/css/occasionPage.scss
@@ -64,7 +64,7 @@
   align-items: center;
 }
 
-.occ-page-gitOk-txt-container {
+.occ-page-giftOk-txt-container {
   width: 250px;
   height: 300px;
   background-color: white;
@@ -87,6 +87,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
+  margin-top: 20px;
 }
 
 .occasion-page-okGift-modal {
@@ -110,4 +111,11 @@
   transform: translateX(-200px);
   box-shadow: 0px 0px 10px rgba($color: #000000, $alpha: 0.5);
   border-radius: 10px;
+}
+
+.occ-page-giftOk-subtitle {
+  font-size: 20px;
+  margin-bottom: 5px;
+  color: $mid-grey;
+  font-family: $secondary-font;
 }
