--- a/src/css/scheduledPage.scss
+++ b/src/css/scheduledPage.scss
@@ -52,3 +52,29 @@
   font-size: 13px;
   margin: 0px 20px 0px 20px;
 }
+
+.scheduled-page-btn-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 300px;
+  height: 50px;
+  color: $primary;
+  font-family: $secondary-font;
+  margin-top: 20px;
+  transition: all 0.3s;
+  h2 {
+    font-size: 15px;
+  }
+}
+
+.scheduled-page-btn {
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.scheduled-page-btn-selected {
+  font-size: 30px;
+  color: $primary-dark;
+}
