--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -30,6 +30,7 @@ $card-radius: 6px;
 $navbar-height: 60px;
 
 $container-width: 70vw;
+$container-phone-width: 85vw;
 
 $box-shadow-containers: 0px 0px 5px
   rgba(
