--- a/src/css/auth.scss
+++ b/src/css/auth.scss
@@ -91,3 +91,10 @@
   position: relative;
   margin-top: 20px;
 }
+
+@media only screen and (max-width: 600px) {
+  .auth-input-container {
+    width: 275px;
+    margin-top: 40px;
+  }
+}
