--- a/src/css/occasionPage.scss
+++ b/src/css/occasionPage.scss
@@ -27,6 +27,7 @@
     padding: 10px;
     width: $container-width;
     margin-top: 20px;
+    text-transform: capitalize;
   }
 }
 
@@ -56,7 +57,7 @@
   }
 }
 
-.occ-page-gitOk-container {
+.occ-page-giftOk-container {
   display: flex;
   width: 100%;
   flex-direction: row;
@@ -77,7 +78,7 @@
   }
 }
 
-.occ-page-gitOk-title {
+.occ-page-giftOk-title {
   font-size: 0.3rem;
 }
 
@@ -118,4 +119,64 @@
   margin-bottom: 5px;
   color: $mid-grey;
   font-family: $secondary-font;
+}
+
+@media only screen and (max-width: 600px) {
+  .occasion-page-container {
+    padding: 10px 0px;
+    width: $container-phone-width;
+  }
+
+  .occasion-page-title {
+    padding: 0px 0px 20px 0px;
+
+    h2 {
+      font-size: 1.2rem;
+    }
+    h1 {
+      font-size: 2.5rem;
+      width: $container-phone-width;
+      margin-top: 20px;
+    }
+  }
+  .occasion-page-btn-container {
+    margin-bottom: 30px;
+    h1 {
+      font-size: 1.3rem;
+      margin: 0px 20px;
+    }
+    h2 {
+      font-size: 1.3rem;
+    }
+  }
+
+  .occ-page-giftOk-container {
+    flex-direction: column;
+  }
+
+  .occ-page-giftOk-subtitle {
+    font-size: 0.9rem;
+    margin-top: 15px;
+  }
+
+  .occasion-page-giftOk-btn-container {
+    flex-direction: column;
+    height: 115px;
+    margin: 0px;
+  }
+  .occasion-page-img {
+    height: 300px;
+    margin: 20px;
+    border: 1px solid $primary;
+  }
+
+  .occ-page-giftOk-txt-container {
+    width: 218px;
+    height: 300px;
+
+    padding: 20px;
+    p {
+      font-family: $secondary-font;
+    }
+  }
 }
