--- a/src/css/occasionPage.scss
+++ b/src/css/occasionPage.scss
@@ -114,6 +114,11 @@
   border-radius: 10px;
 }
 
+.occasion-page-okGift-modal-title {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
 .occ-page-giftOk-subtitle {
   font-size: 20px;
   margin-bottom: 5px;
