--- a/src/css/occasionPage.scss
+++ b/src/css/occasionPage.scss
@@ -184,4 +184,9 @@
       font-family: $secondary-font;
     }
   }
+
+  .occasion-page-okGift-modal-container {
+    width: 300px;
+    transform: translateX(-150px);
+  }
 }
