--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@
 @import "./css/giftsPage.scss";
 @import "./css/cartPage.scss";
 @import "./css/scheduledPage.scss";
-@import "./css/emailTutorial.scss";
+@import "./css/emailTest.scss";
 
 * {
   margin: 0;
