occ list font size change

--- a/src/css/occList.scss
+++ b/src/css/occList.scss
@@ -120,4 +120,9 @@
   .occ-list-title-container {
     padding: 0px;
   }
+  .occ-list-btn-container {
+    h6 {
+      font-size: 0.6rem;
+    }
+  }
 }
